- Criando a função BuildKDTree (WIP)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ if (NOT raylib_FOUND) # If there's none, fetch and build raylib
 endif()
 
 # This is the main part:
-add_executable(${PROJECT_NAME} main.cpp structs.h octree.cpp octree.h)
+add_executable(${PROJECT_NAME} main.cpp structs.h octree.cpp octree.h kdtree.cpp kdtree.h)
 #set(raylib_VERBOSE 1)
 target_link_libraries(${PROJECT_NAME} raylib)
 
